--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ $(function () {
 			updateEverything()
 			mturkCheckPreview()
 		} else {
-			$('body').append($('<div/>').text('sorry, nothing left to do right now...'))
+			$('body').append($('<div style="margin:10px"/>').text('sorry, nothing left to do right now...'))
 		}
 	})
 })
